--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -12,4 +12,4 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 # CONFIG_ZMK_USB_LOGGING=y
 
 # Enable the display
- CONFIG_ZMK_DISPLAY=y
+# CONFIG_ZMK_DISPLAY=y
